Fix: center chart on mobile

--- a/src/components/currencies/currencyDetail/chart/Chart.module.scss
+++ b/src/components/currencies/currencyDetail/chart/Chart.module.scss
@@ -18,9 +18,11 @@
   }
 
   @media (max-width: 1023px) {
+    align-self: center;
     width: 90%;
   }
   @media (max-width: 767px) {
+    align-self: center;
     width: 100%;
   }
 }
